--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <li>git clone path-to-repository</li>
         <li>git status "статус текущего локального репозитория"</li>
         <li>git add - path to file "начать трекать файл Гитом"</li>
+        <li>git commit -am "added new file index.html"</li>
     </ul>
 </div>
