added new file index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <li>git status "статус текущего локального репозитория"</li>
         <li>git add - path to file "начать трекать файл Гитом"</li>
         <li>git commit -am "added new file index.html"</li>
+        <li>git push "отправить изменения на сервак"</li>
+        <li>git pull "получить обновления с сервака"</li>
     </ul>
 </div>
